--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,8 @@
 <body>
   <main>
     <div id="input">
-      <div class="container">
-      <!--add data-->
-      <div class="row">
+      <div class="container">  
+      <div class="row"> 
         <div class="col">
           <label><input class="form-control" placeholder="add bottel name" aria-label="default input example" id="bottle"></label>
         </div>
@@ -64,7 +63,8 @@
         </div>
       </div>
       <br>
-      <!--serch-->
+      <button id="logOutButton" type="Button" value="Log Out" class="btn btn-danger" onclick="logOut()">Log out</button>
+      <br>
     </div>
   </div>
     </div>
@@ -77,6 +77,6 @@
       </tr>
     </table>
   </main>
-  <script src="script.js"></script>
+  <script src="/server/script.js"></script>
 </body>
 </html>
