--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <main>
+    <div class="mt-5"></div>
     <div id="input">
       <div class="container">  
       <div class="row"> 
@@ -76,6 +77,7 @@
         <th scope="col">low</th>
       </tr>
     </table>
+    <br>
     <button id="delete_button" type="button" value="delete" class="btn btn-danger">delete low bottle</button>
   </main>
   <script src="/server/script.js"></script>
