indexの文字修正,アカウント登録後login画面への遷移修正

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
       <div class="container">  
       <div class="row"> 
         <div class="col">
-          <label><input class="form-control" placeholder="add bottel name" aria-label="default input example" id="bottle"></label>
+          <label><input class="form-control" placeholder="Add bottle name" aria-label="default input example" id="bottle"></label>
         </div>
         <div class="col-auto"></div>
         <div class="col">
@@ -25,7 +25,7 @@
         <div class="col">
           <label for="Select1"></label>
           <select class="form-control" placeholder="choos bottle category" aria-label="Default select example" id="select">
-            <option value="その他" hidden>choos bottle category</option>
+            <option value="その他" hidden>Choos bottle category</option>
             <option value="ウイスキー">ウイスキー</option>
             <option value="ウォッカ">ウォッカ</option>
             <option value="ジン">ジン</option>
@@ -50,17 +50,18 @@
               <option value="焼酎">焼酎</option>
               <option value="リキュール">リキュール</option>
               <option value="その他">その他</option>
+              
             </select>
           </div>
       </div>
       <br>
       <div class="row">
         <div class="col">
-          <button type="button" class="btn btn-outline-primary" id="submit">add</button>
+          <button type="button" class="btn btn-outline-primary" id="submit">Add</button>
         </div>
         <div class="col-auto"></div>
         <div class="col">
-          <button type="button" class="btn btn-outline-warning" id="all_show">Allshow</button>
+          <button type="button" class="btn btn-outline-warning" id="all_show">Allview</button>
         </div>
       </div>
       <br>
@@ -74,11 +75,11 @@
       <tr>
         <th id="todoLabel" scope="col">Bottle</th>
         <th scope="col">Category</th>
-        <th scope="col">low</th>
+        <th scope="col">Low</th>
       </tr>
     </table>
     <br>
-    <button id="delete_button" type="button" value="delete" class="btn btn-danger">delete low bottle</button>
+    <button id="delete_button" type="button" value="delete" class="btn btn-danger">Delete low bottle</button>
   </main>
   <script src="/server/script.js"></script>
 </body>
